[package]
name = "quackngo"
version = "0.1.4"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "Duck Duck Go InstantAnswer library written in Rust"
repository = "https://github.com/booyaa/quackngo"
documentation = "https://booyaa.github.io/quackngo/quackngo/index.html"
readme = "README.md"
keywords = ["duckduckgo","api"]
license = "Apache-2.0"
build = "build.rs"

[features]
default = ["serde_codegen"]
unstable = ["serde_macros"]

[build-dependencies]
serde_codegen = { version = "0.8", optional = true }

[dependencies]
hyper = "0.9.10"
serde = "0.8"
serde_json = "0.8"  # just for the example, not required in general
serde_macros = { version = "0.8", optional = true }
log = "0.3"
url = "1.2.0"
